[package]
name = "chamber"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14.27", features = ["full"] }
hyper-rustls = "0.24.1"
nom = "7.1.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.1"

[dev-dependencies]
tower-test = "0.4.0"
